--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "cloudfunction-round2",
-  "version": "1.0.0",
-  "description": "Cloud Function using SAM",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zaknuces/cloudFunction-Round2.git"
-  },
-  "keywords": [
-    "Cloud",
-    "Function",
-    "AWS",
-    "SAM",
-    "Lambda",
-    "S3",
-    "DynamoDB"
-  ],
-  "author": "Owais Zahid",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/zaknuces/cloudFunction-Round2/issues"
-  },
-  "homepage": "https://github.com/zaknuces/cloudFunction-Round2#readme",
-  "dependencies": {
-    "aws-sdk": "^2.201.0"
-  }
+	"name": "cloudfunction-round2",
+	"version": "1.0.0",
+	"description": "Cloud Function using SAM",
+	"main": "index.js",
+	"scripts": {
+		"test": "./node_modules/jasmine/bin/jasmine.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/zaknuces/cloudFunction-Round2.git"
+	},
+	"keywords": [
+		"Cloud",
+		"Function",
+		"AWS",
+		"SAM",
+		"Lambda",
+		"S3",
+		"DynamoDB"
+	],
+	"author": "Owais Zahid",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/zaknuces/cloudFunction-Round2/issues"
+	},
+	"homepage": "https://github.com/zaknuces/cloudFunction-Round2#readme",
+	"dependencies": {
+		"aws-sdk": "^2.201.0"
+	},
+	"devDependencies": {
+		"jasmine": "^3.1.0"
+	}
 }
